[gd_scene load_steps=3 format=3 uid="uid://b4r7qycfbv14u"]

[ext_resource type="Script" path="res://LP4-3.gd" id="1_vb3hy"]
[ext_resource type="Theme" uid="uid://cy0vw4fea4hnt" path="res://basictheme.tres" id="2_fisol"]

[node name="LP4-3" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vb3hy")

[node name="lblTitle" type="Label" parent="."]
layout_mode = 0
offset_left = 376.0
offset_top = 14.0
offset_right = 792.0
offset_bottom = 128.0
theme = ExtResource("2_fisol")
text = "How many eggs purchased?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="lblOut" type="Label" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 234.0
offset_right = 1135.0
offset_bottom = 517.0
theme = ExtResource("2_fisol")
text = "-"
horizontal_alignment = 1
vertical_alignment = 1

[node name="L1" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 385.0
offset_top = 132.0
offset_right = 775.0
offset_bottom = 214.0

[node name="btnCalc" type="Button" parent="."]
layout_mode = 0
offset_left = 25.0
offset_top = 555.0
offset_right = 307.0
offset_bottom = 625.0
theme = ExtResource("2_fisol")
text = "Calculate"

[node name="btnClear" type="Button" parent="."]
layout_mode = 0
offset_left = 452.0
offset_top = 555.0
offset_right = 734.0
offset_bottom = 625.0
theme = ExtResource("2_fisol")
text = "Clear"

[node name="btnExit" type="Button" parent="."]
layout_mode = 0
offset_left = 854.0
offset_top = 555.0
offset_right = 1136.0
offset_bottom = 625.0
theme = ExtResource("2_fisol")
text = "Exit"

[connection signal="pressed" from="btnCalc" to="." method="_on_btn_calc_pressed"]
[connection signal="pressed" from="btnClear" to="." method="_on_btn_clear_pressed"]
[connection signal="pressed" from="btnExit" to="." method="_on_btn_exit_pressed"]
